--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,21 +1,21 @@
 steps:
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['build', '-t', 'gcr.io/$PROJECT_ID/menumlyn', '.']
+    args: ['build', '-t', 'gcr.io/$PROJECT_ID/countlife', '.']
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['push', 'gcr.io/$PROJECT_ID/menumlyn']
+    args: ['push', 'gcr.io/$PROJECT_ID/countlife']
   - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
     entrypoint: gcloud
     args:
       [
-        'run', 'deploy', 'menumlyn',
-        '--image', 'gcr.io/$PROJECT_ID/menumlyn',
+        'run', 'deploy', 'countlife',
+        '--image', 'gcr.io/$PROJECT_ID/countlife',
         '--platform', 'managed',
         '--region', 'europe-central2',
         '--allow-unauthenticated'
       ]
 
 images:
-  - 'gcr.io/$PROJECT_ID/menumlyn'
+  - 'gcr.io/$PROJECT_ID/countlife'
 
 options:
   logging: CLOUD_LOGGING_ONLY
